--- a/talkWithDoctor_Mobile/android/app/src/main/res/values/strings.xml
+++ b/talkWithDoctor_Mobile/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">talkWithDoctor_Mobile</string>
+    <string name="app_name">TalkWithDoctor_Mobile</string>
 </resources>
